<resources>
    <string name="app_name">Whistle Phone Finder</string>
    <string name="thanksForRatingUs"> Thanks For Rating Us</string>

    <string name="do_you_have_a_suggestion_or_found_some_bug_let_us_know_in_feed_below">What you think about our app?</string>


    <string name="PP_Introduction">Introduction</string>
    <string name="Introduction_text">If you choose to use our application, then you agree to the collection and use of information in relation with this policy. The personal information that we collect is used for providing and improving the functionality. We will not use or share your information with anyone except as described in this Privacy Policy.</string>
    <string name="PP_Storage_Permissoin">Storage Permission</string>
    <string name="PP_Storage_Permission_Text">We are requiring storage permission of your phone to complete the core operations of the app. If you want to get full functionality of our app, you must grant storage permission to our app. With this permission, app can read/ modify contents of your phone e.g Contacts. However, we will not collect your data for any personal or commercial use.</string>
    <string name="PP_Children_Policy">Children Policy</string>
    <string name="Children_policy_Text">This application does not address anyone under the age of 13. We do not knowingly collect personal identifiable information from children under 13.</string>
    <string name="PP_Other_Permissions">Other Permissions</string>
    <string name="PP_Other_Permissions_Text"><ul><li><b>Contacts Read/Write</b> - To create backup and restore of contacts</li></ul></string>
    <string name="PP_Information_Collection">Information Collection and Use</string>
    <string name="PP_Information_Collection_Text">We will not get any unnecessary data or share with anyone. The information that we requested is retained on your device and is not collected by us in any way. The app does use third party services that may collect information used to identify you e.g. Google.</string>
    <string name="whistlePhoneFinderHaveBeenEnabled">Whistle Phone Finder have been enabled!</string>
    <string name="ok">Ok</string>
    <string name="loading">Loading</string>
    <string name="loadingAd">Loading Add</string>
    <string name="confirm_exit">Confirm Exit!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="weNeedSomeAccess">We need some access</string>
    <string name="enableTheAppAccess">Enable permissions for better functionality. </string>
    <string name="selectYourNativeLanguage">Select Your Language</string>
    <string name="searchLanguage">Select Language</string>
    <string name="vibration">Vibration</string>
    <string name="heartbeat_type">Heartbeat Type</string>
    <string name="according_to_ringtone">According to Ringtone</string>
    <string name="continuous">Continuous</string>
    <string name="language">Language</string>
    <string name="whistle_sensitivity">Whistle Sensitivity</string>
    <string name="smart_mode">Smart Mode</string>
    <string name="themes">Themes</string>
    <string name="ringtone">Ringtone</string>
    <string name="length_seconds">Volume Length</string>
    <string name="custom_1">Custom 1</string>
    <string name="custom_2">Custom 2</string>
    <string name="custom_3">Custom 3</string>
    <string name="select_from_phone">Select From Phone</string>
    <string name="volume">Volume</string>
    <string name="rate_your_opinion">Rate Your Opinion</string>
    <string name="help_us_to_improve_on_play_store">Help us to improve on play store.</string>
    <string name="flashlight">Flashlight</string>
    <string name="blinking">Blinking</string>
    <string name="feedback">Feedback!</string>
    <string name="describe_your_experience_here">Describe your experience here.</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More App</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="whistle">Whistle</string>
    <string name="phone_finder">Phone Finder</string>
    <string name="get_started">Get Started</string>
    <string name="media_recorder">Media Recorder</string>
    <string name="grant_permission_to_record_audio">Grant permission to record audio.</string>
    <string name="allow">Allow</string>
    <string name="notification_access">Notification Access</string>
    <string name="grant_permission_to_send_you_notification_from_the_app">Grant permission to send you notification from the app.</string>
    <string name="flashlight_on_off_when_ringing">Flashlight on/off when ringing</string>
    <string name="vibration_on_off_when_ringing">Vibration on/off when ringing</string>
    <string name="whistle_recognition_is_turned_off_when_the_phone_screen_is_awake">Whistle recognition is turned off when the phone screen is awake</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user_canceled">Canceled</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="purchasedSuccessfully">Purchased Successfully.</string>
    <string name="bought">Bought</string>
    <string name="buyFor">Buy For</string>

   <!-- Test Ids-->


    <string name="bannerRectangularAdUnitId" translatable="false">ca-app-pub-3940256099942544/6300978111 </string>
    <string name="admobAppId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="appOpenId" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
    <string name="bannerId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialIdSuccess" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
     <string name="interstitialIdRewarded" translatable="false">ca-app-pub-3940256099942544/5354046379</string>


  <!--Original IDs

    <string name="bannerRectangularAdUnitId" translatable="false">ca-app-pub-3024542490880137/6650875463</string>
    <string name="admobAppId" translatable="false">ca-app-pub-3024542490880137~5689039780</string>
    <string name="appOpenId" translatable="false">ca-app-pub-3024542490880137/5497005079</string>
    <string name="bannerId" translatable="false">ca-app-pub-3024542490880137/6650875463</string>
    <string name="interstitialIdSuccess" translatable="false">ca-app-pub-3024542490880137/4482526051</string>
    <string name="interstitialIdRewarded" translatable="false">ca-app-pub-3024542490880137/1306532520</string>

-->
    <string name="accept">Accept</string>
    <string name="use_this_app_without_seeing_any_advertisement">Use this app without seeing any advertisement</string>
    <string name="all_premium_items">All PREMIUM ITEMS</string>
    <string name="buy_for_rs_480_00">BUY For RS 480.00</string>
    <string name="no_more_ads">No more ads</string>
    <string name="switch_to_smart_mode_with_a_quick_video_ad">Switch to smart mode with a quick video ad.</string>
    <string name="skip_ad">Skip Ad</string>
    <string name="video_starting_in">Video starting in</string>

    <string name="on">On</string>
    <string name="off">OFF</string>
    <string name="allow_modify">Allow Modify</string>
    <string name="grant_permission_for_ringtone_settings">Grant permission for Ringtone Settings</string>

</resources>