<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp"
    android:background="@drawable/rounded_corner_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_emailTitleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:padding="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"

            android:text="@string/feedback"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/panda"
            android:layout_width="190dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/feedback"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/do_you_have_a_suggestion_or_found_some_bug_let_us_know_in_feed_below"
            android:textSize="@dimen/_14ssp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">



                <EditText
                    android:id="@+id/et_composeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_17sdp"
                    android:layout_weight="1"
                    android:background="@drawable/feedback_border"
                    android:gravity="top"
                    android:textColorHint="@color/text_color"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12ssp"
                    android:hint="@string/describe_your_experience_here"
                    android:inputType="text|textMultiLine"
                    android:maxLines="50"
                    android:minLines="6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_cancel"
                        android:text="@string/cancel"
                        android:background="@drawable/btn_gradient_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@color/no"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/btn_feedback"
                        android:text="@string/submit"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:background="@drawable/btn_gradient"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>