<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_5sdp"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <!--<FrameLayout
            android:id="@+id/adContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_margin="@dimen/_7sdp"
            android:padding="@dimen/_3sdp"
            android:background="@drawable/border_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/loadingAd"
                android:textColor="@color/dis_color"
                android:textSize="@dimen/_10sdp" />
        </FrameLayout>-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/panda"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/exit"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"

                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_TitleD"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/text_color"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:text="@string/confirm_exit"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:padding="@dimen/_6sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/are_you_sure_you_want_to_exit"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>
        </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_No"
                        android:background="@drawable/btn_gradient_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/no"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@color/no"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/btn_Yes"
                        android:text="@string/yes"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:background="@drawable/btn_gradient"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />
                </LinearLayout>

    </LinearLayout>
</LinearLayout>