<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main">


        <LinearLayout
            android:id="@+id/la1"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/shapes"
            android:gravity="center|bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No more ads"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="0dp"
            android:background="@drawable/background_item"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"

            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lay3"
            app:layout_constraintTop_toBottomOf="@id/la1">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"
                android:src="@drawable/ad_img"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_this_app_without_seeing_any_advertisement"
                android:textColor="#071FC8"
                android:layout_margin="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_margin="@dimen/_6sdp">

                <Button
                    android:id="@+id/btnBuy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_for_rs_480_00"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="#071FC8"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                     />
            </LinearLayout>



            <TextView
                android:id="@+id/vibrastionRb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_premium_items"

                android:textColor="#071FC8"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/dismissbtn"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/cancel"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>